apps/whereami/whereami-backend/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami-backend
  labels:
    istio.io/rev: asm-managed
  annotations:
    mesh.cloud.google.com/proxy: '{"managed":"true"}'
