apps/whereami/whereami-backend/k8s/base/authzpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authz-from-whereami-frontend
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - whereami-frontend
